apps/base/vpn-orchestrator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-orchestrator
  namespace: vpn-orchestrator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vpn-orchestrator
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
